--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,14 @@
         {
             "source": "/api/(.*)",
             "destination": "/api/index.py"
+        },
+        {
+            "source": "/assets/(.*)",
+            "destination": "/frontend/dist/assets/$1"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/frontend/dist/index.html"
         }
     ]
 }
