--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,9 @@
 {
+    "outputDirectory": "frontend/dist",
     "rewrites": [
         {
             "source": "/api/(.*)",
             "destination": "/api/index.py"
-        },
-        {
-            "source": "/assets/(.*)",
-            "destination": "/frontend/dist/assets/$1"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/frontend/dist/index.html"
         }
     ]
 }
